# internal/link/handler.go
@@ -41,14 +41,14 @@ func NewLinkHandler(router *http.ServeMux, deps LinkHandlerDeps) {
 // Create создает новую короткую ссылку
 // @Summary        Создание короткой ссылки
 // @Description    Генерирует короткую ссылку по переданному URL и сохраняет ее в базе
-// @Tags          links
+// @Tags          link
 // @Accept        json
 // @Produce       json
 // @Security      ApiKeyAuth
 // @Param         link body LinkCreateRequest true "Данные для создания ссылки"
 // @Success       201 {object} Link
 // @Failure       400 {string} string "Некорректный запрос"
-// @Router        /links [post]
+// @Router        /link [post]
 func (h *LinkHandler) Create() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		body, err := req.HandleBody[LinkCreateRequest](&w, r)
@@ -77,7 +77,7 @@ func (h *LinkHandler) Create() http.HandlerFunc {
 // Update обновляет существующую короткую ссылку
 // @Summary        Обновление ссылки
 // @Description    Изменяет URL или хеш существующей короткой ссылки
-// @Tags          links
+// @Tags          link
 // @Accept        json
 // @Produce       json
 // @Security      ApiKeyAuth
@@ -86,7 +86,7 @@ func (h *LinkHandler) Create() http.HandlerFunc {
 // @Success       200 {object} Link
 // @Failure       400 {string} string "Некорректный запрос"
 // @Failure       404 {string} string "Ссылка не найдена"
-// @Router        /links/{id} [put]
+// @Router        /link/{id} [put]
 func (h *LinkHandler) Update() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		email, ok := r.Context().Value(middleware.ContextEmailKey).(string)
@@ -120,14 +120,14 @@ func (h *LinkHandler) Update() http.HandlerFunc {
 // Delete удаляет короткую ссылку по ID
 // @Summary        Удаление ссылки
 // @Description    Удаляет существующую короткую ссылку из базы данных
-// @Tags          links
+// @Tags          link
 // @Security      ApiKeyAuth
 // @Param         id path int true "ID ссылки"
 // @Success       200 {string} string "Ссылка успешно удалена"
 // @Failure       400 {string} string "Некорректный ID"
 // @Failure       404 {string} string "Ссылка не найдена"
 // @Failure       500 {string} string "Ошибка сервера"
-// @Router        /links/{id} [delete]
+// @Router        /link/{id} [delete]
 func (h *LinkHandler) Delete() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		idString := r.PathValue("id")
@@ -153,7 +153,7 @@ func (h *LinkHandler) Delete() http.HandlerFunc {
 // GoTo перенаправляет пользователя на оригинальный URL по хешу ссылки
 // @Summary        Редирект по хешу
 // @Description    Ищет короткую ссылку в базе по хешу и выполняет перенаправление
-// @Tags          links
+// @Tags          link
 // @Param         hash path string true "Хеш ссылки"
 // @Success       307 {string} string "Перенаправление"
 // @Failure       404 {string} string "Ссылка не найдена"
@@ -178,7 +178,7 @@ func (h *LinkHandler) GoTo() http.HandlerFunc {
 // GetAll возвращает список коротких ссылок с пагинацией
 // @Summary        Получить все ссылки
 // @Description    Возвращает список всех коротких ссылок с возможностью пагинации
-// @Tags          links
+// @Tags          link
 // @Accept        json
 // @Produce       json
 // @Security      ApiKeyAuth
@@ -186,7 +186,7 @@ func (h *LinkHandler) GoTo() http.HandlerFunc {
 // @Param         offset query int false "Смещение (по умолчанию 0)"
 // @Success       200 {object} GetAllLinksResponse
 // @Failure       400 {string} string "Некорректные параметры limit/offset"
-// @Router        /links [get]
+// @Router        /link [get]
 func (h *LinkHandler) GetAll() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		limit, err := strconv.Atoi(r.URL.Query().Get("limit"))
